# onchain-access-control

./: .bazelignore  .bazelproject  .bazelrc  .gitignore  BUILD.bazel  DEPS.bzl  LICENSE  Makefile  README.md  WORKSPACE  bazel-onchain-access-control  commitlint.config.js  gazelle_python.yaml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  requirements_lock.txt  requirements_windows.txt  tsconfig.base.json  tsconfig.json  turbo.json
aggregation/: package.json
benchmark/: .gitignore  package-lock.json  package.json  report.html  run.sh
benchmark/network/: ethereum.json
benchmark/reports/: report.html  report_0.1_2.html  report_f_1_1.html
benchmark/src/: AccessContextHandler.json  SessionRegistry.json
benchmark/zokrates/: monitor.sh  run.sh
cmd/consumer/: BUILD.bazel
cmd/issuer/: BUILD.bazel  main.go
cmd/owner/: BUILD.bazel  main.go
cmd/usecase_init/: BUILD.bazel  main.go
config/: .env.example  BUILD.bazel  config.go  dev.toml  info.go  kitchensink.toml  prod.toml  test.toml
config/testdata/: test1.toml
contracts/: .env.example  hardhat.config.ts  package.json  tsconfig.json
contracts/deploy/: 001_DIDRegistry.ts  002_AccessContext.ts  002_AccessContextHandler.ts  003_AccessContextHandler.ts  003_SessionRegistry.ts  004_PolicyVerifier.ts  004_SessionRegistry.ts
contracts/scripts/: deploy.ts  registerPolicy.ts
contracts/src/: AccessContext.sol  AccessContextHandler.sol  Policy.sol  SessionRegistry.sol  SimpleDIDRegistry.sol
contracts/test/: AccessContextHandler.fixture.ts  AccessContextHandler.spec.ts
contracts/utils/: connect.ts  index.ts  props.ts
core/client/: BUILD.bazel  policy.go
core/config/: BUILD.bazel  config.go  dev.toml  env.go  info.go  kitchensink.toml  prod.toml  test.toml  types.go
core/consumer/: BUILD.bazel  main.go  server.go  service.go
core/contracts/: AccessContext.go  AccessContextHandler.go  BUILD.bazel  SessionRegistry.go  SimpleDIDRegistry.go
core/contracts/abi/: AccessContext.abi  AccessContextHandler.abi  SessionRegistry.abi  SimpleDIDRegistry.abi
core/env/: BUILD.bazel  env.go
core/issuer/: BUILD.bazel  api.go  handler.go  main.go  server.go  service.go
core/log/: BUILD.bazel  log.go
core/owner/: BUILD.bazel  main.go  server.go  service.go
core/resourceowner/: BUILD.bazel  api.go  handler.go  main.go  server.go  service.go
core/resourceuser/: BUILD.bazel  api.go  handler.go  server.go  service.go
core/storage/: BUILD.bazel  bolt.go  db_test.go  encrypt.go
core/testutil/: BUILD.bazel  testutil.go
core/tx/: BUILD.bazel  types.go
dev/attestation/: BUILD.bazel  __init__.py  main.py  zokrates.py
dev/attestation/artifacts/: witness-parameters.txt
dev/attestation/witness/: min.txt
dev/client_cli/: assign_role.sh  create_access_context.sh  register_resource.sh  request_resource.sh  run_all.sh  start_session.sh
dev/gazelle/: BUILD.bazel
dev/zokrates/: run_docker.sh  setup.sh
dev/zokrates_gen/: run.sh
docs/static/: access_token.json  commercial_invoice_credential.json  did_doc_consumer.json  did_doc_issuer.json  did_doc_owner_pkh.json  did_doc_owner_web.json  prove_attribute.zok  schema_supplycontract.json  sd-vc.json  vc_supplycontract.json  vp.json  vp_request.json
internal/credential/: BUILD.bazel
internal/did/: BUILD.bazel
internal/encryption/: BUILD.bazel  encryption.go  encryption_test.go
internal/keyaccess/: BUILD.bazel  jwt.go
internal/schema/: BUILD.bazel
internal/util/: BUILD.bazel  error.go  jwt.go
internal/verification/: BUILD.bazel  verification.go
issuer/: BUILD.bazel  go.mod  main.go
log/: BUILD.bazel  log.go
owner/: BUILD.bazel  main.go
pkg/aggregation/: README.md
pkg/client/: BUILD.bazel  client.go
pkg/common/: BUILD.bazel  request.go  storage.go
pkg/config/: BUILD.bazel
pkg/consumer/: BUILD.bazel  main.go  server.go  service.go
pkg/contracts/: .env.example  hardhat.config.ts  package.json  tsconfig.json
pkg/credential/: BUILD.bazel  model.go  service.go  status.go  storage.go
pkg/did/: BUILD.bazel  batch.go  handler.go  key.go  model.go  service.go  storage.go
pkg/did/resolution/: BUILD.bazel  resolver.go
pkg/framework/: BUILD.bazel
pkg/issuance/: BUILD.bazel  model.go  service.go
pkg/issuer/: BUILD.bazel  main.go  server.go  service.go
pkg/issuer/server/: BUILD.bazel  server.go  server_issuance_test.go
pkg/issuer/server/router/: BUILD.bazel  health.go  issuance.go  router_test.go
pkg/keystore/: BUILD.bazel  service.go  service_test.go  storage.go
pkg/manifest/: BUILD.bazel  application.go  manifest.go  response.go  service.go
pkg/operation/: BUILD.bazel  service.go  storage.go  storage_test.go
pkg/operation/credential/: BUILD.bazel
pkg/operation/storage/: BUILD.bazel
pkg/operation/storage/namespace/: BUILD.bazel  namespace.go
pkg/operation/submission/: BUILD.bazel  submission.go  submission_test.go
pkg/owner/: BUILD.bazel  main.go  server.go  service.go
pkg/presentation/: BUILD.bazel  service.go  storage.go
pkg/presentation/model/: BUILD.bazel  model.go
pkg/presentation/storage/: BUILD.bazel  storage.go
pkg/schema/: BUILD.bazel  model.go  service.go  storage.go
pkg/storage/: BUILD.bazel  db_test.go  encrypt.go  redis.go
pkg/testutil/: BUILD.bazel  testutil.go
pkg/ui/: README.md  package.json  tsconfig.json
pkg/user/: BUILD.bazel
pkg/util/: BUILD.bazel
pkg/webhook/: BUILD.bazel  service.go  storage.go
sample-microservice/: BUILD.bazel
usecase/: docker-compose.yml
usecase/accreditation_body/: .env.example  BUILD.bazel
usecase/authority/: BUILD.bazel  Dockerfile
usecase/component_supplier/: BUILD.bazel  Dockerfile  main.go
usecase/component_supplier_1/: BUILD.bazel  config.toml  main.go
usecase/module_supplier/: BUILD.bazel  Dockerfile  main.go
usecase/module_supplier_1/: BUILD.bazel  main.go
usecase/original_equipment_manufacturer/: BUILD.bazel  Dockerfile  config.toml  main.go
usecase/part_supplier_1/: BUILD.bazel  Dockerfile  config.toml  main.go
usecase/part_supplier_2/: BUILD.bazel  Dockerfile  config.toml  main.go
(+497 files in other folders)
