load("@bazel_gazelle//:def.bzl", "gazelle")
load("@rules_python//python/pip_install:requirements.bzl", "compile_pip_requirements")

exports_files([
    "DEPS.bzl",
    "requirements.txt",
    "WORKSPACE",
    "go.mod",
    "go.sum",
])

# Update dependencies with:
# bazel run //:requirements.update
compile_pip_requirements(
    name = "requirements",
    extra_args = [
        "--allow-unsafe",
    ],
)

gazelle(
    name = "gazelle",
    prefix = "github.com/fapiper/onchain-access-control",
)

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=DEPS.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)

# Gazelle needs the following resolve hints.
#
# gazelle:resolve go github.com/google/cel-go/cel @com_github_google_cel_go//cel:go_default_library
# gazelle:resolve go github.com/google/cel-go/common/types/ref @com_github_google_cel_go//common/types/ref:go_default_library
