load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "log",
    srcs = ["log.go"],
    importpath = "github.com/fapiper/onchain-access-control/log",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
