load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "owner_lib",
    srcs = ["main.go"],
    importpath = "github.com/fapiper/onchain-access-control/owner",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)

go_binary(
    name = "owner",
    embed = [":owner_lib"],
    visibility = ["//visibility:public"],
)
