load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "contracts",
    srcs = [
        "AccessContext.go",
        "AccessContextHandler.go",
        "SessionRegistry.go",
        "SimpleDIDRegistry.go",
    ],
    importpath = "github.com/fapiper/onchain-access-control/core/contracts",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//core/types",
        "@com_github_ethereum_go_ethereum//event",
    ],
)
