load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "issuer",
    srcs = [
        "main.go",
        "server.go",
        "service.go",
    ],
    importpath = "github.com/fapiper/onchain-access-control/core/issuer",
    visibility = ["//visibility:public"],
    deps = [
        "//config",
        "//core/server/framework",
        "//core/server/handler",
        "//core/server/middleware",
        "//core/server/router",
        "//core/service/credential",
        "//core/service/did",
        "//core/service/framework",
        "//core/service/issuance",
        "//core/service/keystore",
        "//core/service/manifest",
        "//core/service/operation",
        "//core/service/presentation",
        "//core/service/schema",
        "//core/service/webhook",
        "//core/service/well-known",
        "//core/storage",
        "//log",
        "@com_github_ardanlabs_conf//:conf",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@com_github_tbd54566975_ssi_sdk//schema",
        "@com_github_tbd54566975_ssi_sdk//util",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
    ],
)
