load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

go_library(
    name = "resourceowner",
    srcs = [
        "api.go",
        "handler.go",
        "server.go",
        "service.go",
    ],
    importpath = "github.com/fapiper/onchain-access-control/core/resourceowner",
    visibility = ["//visibility:public"],
    deps = [
        "//core/config",
        "//core/env",
        "//core/log",
        "//core/server/framework",
        "//core/server/middleware",
        "//core/server/router",
        "//core/service/accesscontrol:access",
        "//core/service/credential",
        "//core/service/did",
        "//core/service/framework",
        "//core/service/keystore",
        "//core/service/operation",
        "//core/service/presentation",
        "//core/service/rpc",
        "//core/service/rpc/ipfs",
        "//core/service/schema",
        "//core/service/webhook",
        "//core/service/well-known",
        "//core/storage",
        "@com_github_ethereum_go_ethereum//ethclient",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_ipfs_go_ipfs_api//:go-ipfs-api",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_viper//:viper",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
        "@com_github_tbd54566975_ssi_sdk//schema",
        "@com_github_tbd54566975_ssi_sdk//util",
        "@io_opentelemetry_go_contrib_instrumentation_github_com_gin_gonic_gin_otelgin//:otelgin",
    ],
)
