load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "tx",
    srcs = ["types.go"],
    importpath = "github.com/fapiper/onchain-access-control/core/tx",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_ethereum_go_ethereum//:go-ethereum",
        "@com_github_ethereum_go_ethereum//accounts/abi/bind",
        "@com_github_ethereum_go_ethereum//common",
        "@com_github_ethereum_go_ethereum//common/hexutil",
        "@com_github_pkg_errors//:errors",
    ],
)
