load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "attestation_lib",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)

py_binary(
    name = "attestation",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [":attestation_lib"],
)
