load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "credential",
    srcs = [
        "model.go",
        "service.go",
        "status.go",
        "storage.go",
    ],
    importpath = "github.com/fapiper/onchain-access-control/pkg/credential",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/common",
        "//pkg/config",
        "//pkg/framework",
        "//pkg/framework/pagination",
        "//pkg/internal/credential",
        "//pkg/internal/keyaccess",
        "//pkg/internal/verification",
        "//pkg/keystore",
        "//pkg/schema",
        "//pkg/storage",
        "//pkg/util",
        "@com_github_goccy_go_json//:go-json",
        "@com_github_google_uuid//:uuid",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_tbd54566975_ssi_sdk//credential",
        "@com_github_tbd54566975_ssi_sdk//credential/integrity",
        "@com_github_tbd54566975_ssi_sdk//credential/schema",
        "@com_github_tbd54566975_ssi_sdk//credential/status",
        "@com_github_tbd54566975_ssi_sdk//did",
        "@com_github_tbd54566975_ssi_sdk//did/resolution",
        "@com_github_tbd54566975_ssi_sdk//util",
        "@tech_einride_go_aip//filtering",
    ],
)
