load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "did",
    srcs = [
        "batch.go",
        "handler.go",
        "key.go",
        "model.go",
        "service.go",
        "storage.go",
    ],
    importpath = "github.com/fapiper/onchain-access-control/pkg/did",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/common",
        "//pkg/config",
        "//pkg/did/resolution",
        "//pkg/framework",
        "//pkg/keystore",
        "//pkg/storage",
        "//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@com_github_mr_tron_base58//:base58",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_tbd54566975_ssi_sdk//crypto",
        "@com_github_tbd54566975_ssi_sdk//did",
        "@com_github_tbd54566975_ssi_sdk//did/ion",
        "@com_github_tbd54566975_ssi_sdk//did/key",
        "@com_github_tbd54566975_ssi_sdk//did/resolution",
        "@com_github_tbd54566975_ssi_sdk//util",
    ],
)
