load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "issuer_lib",
    srcs = ["main.go"],
    importpath = "github.com/fapiper/onchain-access-control/pkg/issuer",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_tbd54566975_ssi_sdk//crypto",
        "@com_github_tbd54566975_ssi_sdk//did/key",
        "@com_github_tbd54566975_ssi_sdk//util",
    ],
)

go_binary(
    name = "issuer",
    embed = [":issuer_lib"],
    visibility = ["//visibility:public"],
)
