load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "issuer_lib",
    srcs = ["main.go"],
    importpath = "github.com/fapiper/onchain-access-control/pkg/issuer",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "issuer",
    embed = [":issuer_lib"],
    visibility = ["//visibility:public"],
)
