load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "presentation",
    srcs = [
        "service.go",
        "storage.go",
    ],
    importpath = "github.com/fapiper/onchain-access-control/pkg/presentation",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/did",
        "//internal/keyaccess",
        "//internal/verification",
        "//pkg/common",
        "//pkg/framework",
        "//pkg/keystore",
        "//pkg/operation",
        "//pkg/operation/storage",
        "//pkg/operation/storage/namespace",
        "//pkg/operation/submission",
        "//pkg/presentation/model",
        "//pkg/presentation/storage",
        "//pkg/schema",
        "//pkg/storage",
        "@com_github_goccy_go_json//:go-json",
        "@com_github_lestrrat_go_jwx//jws",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_tbd54566975_ssi_sdk//credential/exchange",
        "@com_github_tbd54566975_ssi_sdk//credential/integrity",
        "@com_github_tbd54566975_ssi_sdk//did/resolution",
        "@com_github_tbd54566975_ssi_sdk//util",
        "@tech_einride_go_aip//filtering",
    ],
)
