load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "issuer_lib",
    srcs = ["main.go"],
    importpath = "github.com/fapiper/onchain-access-control/pkg/issuer",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)

go_binary(
    name = "issuer",
    embed = [":user_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "user_lib",
    srcs = ["main.go"],
    importpath = "github.com/fapiper/onchain-access-control/pkg/user",
    visibility = ["//visibility:private"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)
